fix: remove a call to method available since Java 11
To be compatible with Java 8